kubernetes/consul/templates/getaway/api-gateaway.yaml
apiVersion: gateway.networking.k8s.io/v1
# The Gateway is the main infrastructure resource that links API gateway components.
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
  labels:
    component: api-gateway
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    cert-manager.io/cluster-issuer: letsencrypt-supernatural
spec:
  gatewayClassName: consul
  # Configures the listener that is bound to the gateway's address.
  listeners:
    # Defines the listener protocol (HTTP, HTTPS, or TCP)
#  - protocol: HTTP
#    port: 80
#    name: http
#    hostname: "www.supernatural.pp.ua"
#    allowedRoutes:
#      namespaces:
#        from: All
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "www.supernatural.pp.ua"
      tls:
        mode: Terminate
        certificateRefs:
          - name: supernatural-tls
      allowedRoutes:
        namespaces:
          from: All
