kubernetes/consul/templates/getaway/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: app
spec:
  parentRefs:
  - name: api-gateway
    namespace: consul
  rules:
  - backendRefs:
    - name: frontend-service
      port: 8080
